<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="file"
            type="com.streamwide.fileencrypter.domain.model.File" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content"
        android:background="@color/transparent"
        tools:context=".presentation.dialog.FilePopupAction">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_actions"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/background"
            android:background="@drawable/bg_round_left_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/inter_semi_bold"
                android:gravity="center"
                android:paddingHorizontal="24dp"
                android:text="@{file.name}"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_open_file"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/white"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:text="@string/open_the_file"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/file_name" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_detail"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/white"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:text="@string/detail"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_open_file" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/red"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_loading"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_marginHorizontal="16dp"
            android:visibility="gone"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_round_left_bottom"
            android:backgroundTint="@color/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/text_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/text_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:text="@string/decryption_file_in_progress"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progress" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/grey"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
